Attempted to fix issue with drop down menu on mobile. May need to add javascript to handle functionality of the button for mobile, but it seems to be working properly now.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -486,6 +486,11 @@ footer {
         cursor: pointer;
     }
 
+    .dropbtn:first-child {
+        pointer-events: none;
+        cursor: default;
+    }
+
     /* -------------Changes the look of the hamburger menu bars------------*/
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
